Action actuator doesn't finish playing if frame rate drops #32213

Closed
opened 2012-07-29 08:04:53 +02:00 by Alex Fraser · 3 comments
Member

Category: Animation

%%%If an Action actuator is used to start an action, and something causes rendering to pause, the action may not finish playing. Workaround: use KX_GameObject.playAction instead.

Attached are some files that demonstrate the problem (in action_slow.zip):

  1. action_actuator_glsl.blend: Contains a colour wheel object with many materials. It is on a hidden layer and invisible. When you press Space, the wheel is added to the scene. Then: 1) it uses an Action actuator to play a short (11-frame) action. 2) one logic tic later, it makes itself visible. At this point, the shaders are compiled.
  2. action_actuator_sleep.blend: As 1. above, but the wheel is initially visible, and Python's time.sleep() is used to introduce lag a random number of tics after the action starts playing.
  3. action_python_sleep.blend: As 2. above, but the action is started using KX_GameObject.playAction instead of an actuator.

Expected result: The colour wheel should scale up and just touch the grey circle that surrounds it.
Actual result: in 1 and 2, the wheel only scales up part of the way. 3 behaves as expected.

OS: Ubuntu 12.04 (64-bit)
Blender version: 2.63.14 r48921 and 2.63a%%%

**Category**: Animation %%%If an Action actuator is used to start an action, and something causes rendering to pause, the action may not finish playing. Workaround: use KX_GameObject.playAction instead. Attached are some files that demonstrate the problem (in action_slow.zip): 1. action_actuator_glsl.blend: Contains a colour wheel object with many materials. It is on a hidden layer and invisible. When you press Space, the wheel is added to the scene. Then: 1) it uses an Action actuator to play a short (11-frame) action. 2) one logic tic later, it makes itself visible. At this point, the shaders are compiled. 2. action_actuator_sleep.blend: As 1. above, but the wheel is initially visible, and Python's time.sleep() is used to introduce lag a random number of tics after the action starts playing. 3. action_python_sleep.blend: As 2. above, but the action is started using KX_GameObject.playAction instead of an actuator. Expected result: The colour wheel should scale up and just touch the grey circle that surrounds it. Actual result: in 1 and 2, the wheel only scales up part of the way. 3 behaves as expected. OS: Ubuntu 12.04 (64-bit) Blender version: 2.63.14 r48921 and 2.63a%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r49349.%%%

%%%Fixed in r49349.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32213
No description provided.